gen/matlabParser.py
# Generated from C:/Users/Kira/PycharmProjects/MathLab_to_Python/grammar/matlab.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class matlabParser ( Parser ):

    grammarFileName = "matlab.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "':'", "';'", 
                     "','", "'+'", "'-'", "'*'", "'/'", "'~'", "'^'", "'&'", 
                     "'|'", "'\\'", "'>'", "'<'", "'='", "'.*'", "'.\\'", 
                     "'./'", "'.^'", "'break'", "'return'", "'function'", 
                     "'for'", "'while'", "'end'", "'global'", "'if'", "'clear'", 
                     "'else'", "'elseif'", "'<='", "'>='", "'=='", "'~='", 
                     "'transpose'", "'.''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ARRAYMUL", "ARRAYDIV", "ARRAYRDIV", "ARRAYPOW", "BREAK", 
                      "RETURN", "FUNCTION", "FOR", "WHILE", "END", "GLOBAL", 
                      "IF", "CLEAR", "ELSE", "ELSEIF", "LE_OP", "GE_OP", 
                      "EQ_OP", "NE_OP", "TRANSPOSE", "NCTRANSPOSE", "STRING_LITERAL", 
                      "IDENTIFIER", "CONSTANT", "CR", "WS" ]

    RULE_file_ = 0
    RULE_primary_expression = 1
    RULE_open_par = 2
    RULE_close_par = 3
    RULE_open_bracket = 4
    RULE_close_bracket = 5
    RULE_postfix_expression = 6
    RULE_index_expression = 7
    RULE_colon = 8
    RULE_semicolon = 9
    RULE_index_expression_list = 10
    RULE_comma = 11
    RULE_array_expression = 12
    RULE_unary_expression = 13
    RULE_unary_operator = 14
    RULE_op_sum = 15
    RULE_op_sub = 16
    RULE_op_mul = 17
    RULE_op_div = 18
    RULE_op_not = 19
    RULE_op_pow = 20
    RULE_op_and = 21
    RULE_op_or = 22
    RULE_op_doble_backslash = 23
    RULE_op_greater = 24
    RULE_op_less = 25
    RULE_op_greater_equal = 26
    RULE_op_less_equal = 27
    RULE_op_not_equal = 28
    RULE_op_equal = 29
    RULE_multiplicative_expression = 30
    RULE_additive_expression = 31
    RULE_relational_expression = 32
    RULE_equality_expression = 33
    RULE_and_expression = 34
    RULE_or_expression = 35
    RULE_expression = 36
    RULE_assignment_expression = 37
    RULE_eostmt = 38
    RULE_statement = 39
    RULE_statement_list = 40
    RULE_identifier_list = 41
    RULE_global_statement = 42
    RULE_clear_statement = 43
    RULE_expression_statement = 44
    RULE_assignment_statement = 45
    RULE_array_element = 46
    RULE_array_list = 47
    RULE_selection_statement = 48
    RULE_elseif_clause = 49
    RULE_iteration_statement = 50
    RULE_jump_statement = 51
    RULE_translation_unit = 52
    RULE_func_ident_list = 53
    RULE_func_return_list = 54
    RULE_function_declare_lhs = 55
    RULE_function_declare = 56

    ruleNames =  [ "file_", "primary_expression", "open_par", "close_par", 
                   "open_bracket", "close_bracket", "postfix_expression", 
                   "index_expression", "colon", "semicolon", "index_expression_list", 
                   "comma", "array_expression", "unary_expression", "unary_operator", 
                   "op_sum", "op_sub", "op_mul", "op_div", "op_not", "op_pow", 
                   "op_and", "op_or", "op_doble_backslash", "op_greater", 
                   "op_less", "op_greater_equal", "op_less_equal", "op_not_equal", 
                   "op_equal", "multiplicative_expression", "additive_expression", 
                   "relational_expression", "equality_expression", "and_expression", 
                   "or_expression", "expression", "assignment_expression", 
                   "eostmt", "statement", "statement_list", "identifier_list", 
                   "global_statement", "clear_statement", "expression_statement", 
                   "assignment_statement", "array_element", "array_list", 
                   "selection_statement", "elseif_clause", "iteration_statement", 
                   "jump_statement", "translation_unit", "func_ident_list", 
                   "func_return_list", "function_declare_lhs", "function_declare" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ARRAYMUL=20
    ARRAYDIV=21
    ARRAYRDIV=22
    ARRAYPOW=23
    BREAK=24
    RETURN=25
    FUNCTION=26
    FOR=27
    WHILE=28
    END=29
    GLOBAL=30
    IF=31
    CLEAR=32
    ELSE=33
    ELSEIF=34
    LE_OP=35
    GE_OP=36
    EQ_OP=37
    NE_OP=38
    TRANSPOSE=39
    NCTRANSPOSE=40
    STRING_LITERAL=41
    IDENTIFIER=42
    CONSTANT=43
    CR=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(matlabParser.EOF, 0)

        def statement_list(self):
            return self.getTypedRuleContext(matlabParser.Statement_listContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_" ):
                return visitor.visitFile_(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = matlabParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32993318015946) != 0):
                self.state = 114
                self.statement_list(0)


            self.state = 117
            self.match(matlabParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(matlabParser.IDENTIFIER, 0)

        def CONSTANT(self):
            return self.getToken(matlabParser.CONSTANT, 0)

        def STRING_LITERAL(self):
            return self.getToken(matlabParser.STRING_LITERAL, 0)

        def open_par(self):
            return self.getTypedRuleContext(matlabParser.Open_parContext,0)


        def expression(self):
            return self.getTypedRuleContext(matlabParser.ExpressionContext,0)


        def close_par(self):
            return self.getTypedRuleContext(matlabParser.Close_parContext,0)


        def open_bracket(self):
            return self.getTypedRuleContext(matlabParser.Open_bracketContext,0)


        def close_bracket(self):
            return self.getTypedRuleContext(matlabParser.Close_bracketContext,0)


        def array_list(self):
            return self.getTypedRuleContext(matlabParser.Array_listContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_primary_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary_expression" ):
                listener.enterPrimary_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimary_expression" ):
                listener.exitPrimary_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimary_expression" ):
                return visitor.visitPrimary_expression(self)
            else:
                return visitor.visitChildren(self)




    def primary_expression(self):

        localctx = matlabParser.Primary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primary_expression)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.match(matlabParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(matlabParser.CONSTANT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(matlabParser.STRING_LITERAL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.open_par()
                self.state = 123
                self.expression(0)
                self.state = 124
                self.close_par()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.open_bracket()
                self.state = 127
                self.close_bracket()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.open_bracket()
                self.state = 130
                self.array_list(0)
                self.state = 131
                self.close_bracket()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Open_parContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_open_par

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpen_par" ):
                listener.enterOpen_par(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpen_par" ):
                listener.exitOpen_par(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpen_par" ):
                return visitor.visitOpen_par(self)
            else:
                return visitor.visitChildren(self)




    def open_par(self):

        localctx = matlabParser.Open_parContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_open_par)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(matlabParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Close_parContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_close_par

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClose_par" ):
                listener.enterClose_par(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClose_par" ):
                listener.exitClose_par(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClose_par" ):
                return visitor.visitClose_par(self)
            else:
                return visitor.visitChildren(self)




    def close_par(self):

        localctx = matlabParser.Close_parContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_close_par)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(matlabParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Open_bracketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_open_bracket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpen_bracket" ):
                listener.enterOpen_bracket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpen_bracket" ):
                listener.exitOpen_bracket(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpen_bracket" ):
                return visitor.visitOpen_bracket(self)
            else:
                return visitor.visitChildren(self)




    def open_bracket(self):

        localctx = matlabParser.Open_bracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_open_bracket)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(matlabParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Close_bracketContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_close_bracket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClose_bracket" ):
                listener.enterClose_bracket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClose_bracket" ):
                listener.exitClose_bracket(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClose_bracket" ):
                return visitor.visitClose_bracket(self)
            else:
                return visitor.visitChildren(self)




    def close_bracket(self):

        localctx = matlabParser.Close_bracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_close_bracket)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(matlabParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary_expression(self):
            return self.getTypedRuleContext(matlabParser.Primary_expressionContext,0)


        def array_expression(self):
            return self.getTypedRuleContext(matlabParser.Array_expressionContext,0)


        def postfix_expression(self):
            return self.getTypedRuleContext(matlabParser.Postfix_expressionContext,0)


        def TRANSPOSE(self):
            return self.getToken(matlabParser.TRANSPOSE, 0)

        def NCTRANSPOSE(self):
            return self.getToken(matlabParser.NCTRANSPOSE, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_postfix_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfix_expression" ):
                listener.enterPostfix_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfix_expression" ):
                listener.exitPostfix_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfix_expression" ):
                return visitor.visitPostfix_expression(self)
            else:
                return visitor.visitChildren(self)



    def postfix_expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = matlabParser.Postfix_expressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_postfix_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 144
                self.primary_expression()
                pass

            elif la_ == 2:
                self.state = 145
                self.array_expression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 152
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = matlabParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 148
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 149
                        self.match(matlabParser.TRANSPOSE)
                        pass

                    elif la_ == 2:
                        localctx = matlabParser.Postfix_expressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfix_expression)
                        self.state = 150
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 151
                        self.match(matlabParser.NCTRANSPOSE)
                        pass

             
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Index_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def colon(self):
            return self.getTypedRuleContext(matlabParser.ColonContext,0)


        def expression(self):
            return self.getTypedRuleContext(matlabParser.ExpressionContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_index_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_expression" ):
                listener.enterIndex_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_expression" ):
                listener.exitIndex_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_expression" ):
                return visitor.visitIndex_expression(self)
            else:
                return visitor.visitChildren(self)




    def index_expression(self):

        localctx = matlabParser.Index_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_index_expression)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.colon()
                pass
            elif token in [1, 3, 8, 9, 12, 41, 42, 43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_colon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColon" ):
                listener.enterColon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColon" ):
                listener.exitColon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColon" ):
                return visitor.visitColon(self)
            else:
                return visitor.visitChildren(self)




    def colon(self):

        localctx = matlabParser.ColonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_colon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(matlabParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SemicolonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_semicolon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSemicolon" ):
                listener.enterSemicolon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSemicolon" ):
                listener.exitSemicolon(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSemicolon" ):
                return visitor.visitSemicolon(self)
            else:
                return visitor.visitChildren(self)




    def semicolon(self):

        localctx = matlabParser.SemicolonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_semicolon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(matlabParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def index_expression(self):
            return self.getTypedRuleContext(matlabParser.Index_expressionContext,0)


        def index_expression_list(self):
            return self.getTypedRuleContext(matlabParser.Index_expression_listContext,0)


        def comma(self):
            return self.getTypedRuleContext(matlabParser.CommaContext,0)


        def getRuleIndex(self):
            return matlabParser.RULE_index_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_expression_list" ):
                listener.enterIndex_expression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_expression_list" ):
                listener.exitIndex_expression_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_expression_list" ):
                return visitor.visitIndex_expression_list(self)
            else:
                return visitor.visitChildren(self)



    def index_expression_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = matlabParser.Index_expression_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_index_expression_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.index_expression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = matlabParser.Index_expression_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_index_expression_list)
                    self.state = 168
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 169
                    self.comma()
                    self.state = 170
                    self.index_expression() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CommaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_comma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComma" ):
                listener.enterComma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComma" ):
                listener.exitComma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComma" ):
                return visitor.visitComma(self)
            else:
                return visitor.visitChildren(self)



